--- a/scratchpay/package.json
+++ b/scratchpay/package.json
@@ -17,6 +17,7 @@
     "highland": "^2.13.5",
     "holidays-calendar": "^1.0.2",
     "luxon": "^1.22.0",
+    "nyc": "^15.0.0",
     "postal": "^2.0.5",
     "winston": "^3.2.1"
   },
