--- a/scratchpay/package.json
+++ b/scratchpay/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
     "mocha": "^7.1.0"
   }
 }
