--- a/scratchpay/package.json
+++ b/scratchpay/package.json
@@ -19,6 +19,7 @@
     "luxon": "^1.22.0",
     "nyc": "^15.0.0",
     "postal": "^2.0.5",
+    "supertest": "^4.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
