--- a/scratchpay/package.json
+++ b/scratchpay/package.json
@@ -7,10 +7,11 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "nyc mocha ./**/**/tests/*.spec.js"
+    "test": "nyc mocha ./**/**/tests/*.spec.js report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "business-days-calculator": "^2.2.0",
+    "coveralls": "^3.0.9",
     "date-holidays": "^1.4.14",
     "express": "^4.17.1",
     "express-gateway": "^1.16.10",
