--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "nyc mocha ./**/**/tests/*.spec.js && nyc report --reporter=text-lcov | coveralls"
+    "test": "nyc mocha ./**/**/tests/*.spec.js --timeout 3000 --exit && nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "business-days-calculator": "^2.2.0",
